# myChatServer

./: .gitignore  CMakeLists.txt  json.hpp
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp  user.hpp
include/server/db/: OfflinemessageModel.hpp  UserModel.hpp  db.hpp
include/server/model/: FriendModel.hpp  GroupModel.hpp  UserModel.hpp  group.hpp  groupuser.hpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
